Add loadEntities batch call and rename listFullEntities